# vqvae

./: .gitignore  LICENSE  README.md  pyproject.toml
notebooks/: plot_loss.ipynb  visualization.ipynb
scripts/train/: celeba.py  cifar10.py
src/pixelcnn/modules/: activation.py
src/vqvae/: __init__.py
src/vqvae/data/: celeba.py  cifar10.py  fashion_mnist.py  transforms.py
src/vqvae/modules/: __init__.py  convolution.py  decoder.py  deconvolution.py  encoder.py  quantizer.py  residual.py  vqvae_model.py
src/vqvae/utils/: device.py  logging.py  visualization.py
